RESOLVED FIXED55562
REGRESSION (r80096): [Chromium] fast/forms/input-number-unacceptable-style.html failure
https://bugs.webkit.org/show_bug.cgi?id=55562
Summary REGRESSION (r80096): [Chromium] fast/forms/input-number-unacceptable-style.ht...
Kent Tamura
Reported 2011-03-02 01:56:56 PST
Attachments
Kent Tamura
Comment 1 2011-03-02 03:14:20 PST
Note You need to log in before you can comment on or make changes to this bug.