2011-03-02  Kent Tamura  <tkent@chromium.org>

Unreviewed, a trivial fix for r80096.

        REGRESSION (r80096): [Chromium] fast/forms/input-number-unacceptable-style.html failure
        https://bugs.webkit.org/show_bug.cgi?id=55562

        * platform/chromium/test_expectations.txt:
2011-03-02  Kent Tamura  <tkent@chromium.org>

        Unreviewed, a trivial fix for r80096.

        REGRESSION (r80096): [Chromium] fast/forms/input-number-unacceptable-style.html failure
        https://bugs.webkit.org/show_bug.cgi?id=55562

        * platform/text/LocalizedNumberICU.cpp:
        (WebCore::parseLocalizedNumber): Check the ParsePosition after NumberFormat::parse()
          to reject strings with a valid number + extra letters.

Canonical link: https://commits.webkit.org/70002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80105 268f45cc-cd09-0410-ab3c-d52691b4dbfc